# knp

./: .gitignore  .gitlint  .gitmodules  .oclint  .pre-commit-config.yaml  AUTHORS  CLA.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  LICENSE.txt  NOTICE.txt  README.md  build.sh  requirements.txt  run_pylint.py  test.py
doc/: CMakeLists.txt  index.html
doc/html/: index.html
doc/html/styles/: fonts.css  globals.css  style.css
doc/html/user_guide/: 232786.htm  232787.htm  232788.htm  232883.htm  235045.htm  235046.htm  235050.htm  235051.htm  235594.htm  235738.htm  235749.htm  235753.htm  235801.htm  235842.htm  235844.htm  235849.htm  235859.htm  235860.htm  235876.htm  235877.htm  235878.htm  235885.htm  235889.htm  235890.htm  240225.htm  240504.htm  240611.htm  243537.htm  243539.htm  243548.htm  243634.htm  244427.htm  244808.htm  244932.htm  244933.htm  244944.htm  245041.htm  245069.htm  245461.htm  247159.htm  (+60 more)
doc/html/user_guide/static/: museosanscyrl-700.eot  museosanscyrl-900.eot
doc/static/: museosanscyrl-100.eot  museosanscyrl-300.eot  museosanscyrl-500.eot
doc/styles/: fonts.css  style.css
doc/user_guide/: 232786.htm  232787.htm  232788.htm  232883.htm  235045.htm  235046.htm  235050.htm  235051.htm  235594.htm  235738.htm  235749.htm  235753.htm  235801.htm  235842.htm  235844.htm  235849.htm  235859.htm  235860.htm  235876.htm  235877.htm  235878.htm  235885.htm  235889.htm  235890.htm  240504.htm  243537.htm  243539.htm  243548.htm  243634.htm  244427.htm  244808.htm  244932.htm  244933.htm  244944.htm  245041.htm  245069.htm  245461.htm  247159.htm  247186.htm  247366.htm  (+23 more)
examples/: .clang-format  CMakeLists.txt
examples/arni-save-load/: CMakeLists.txt  describe_network.h  file_processing.h  main.cpp
examples/mnist-client/: CMakeLists.txt  README.md  graph_physics.cpp  graph_physics.h  inference.cpp  inference.h  load_from_csv.cpp  load_from_csv.h  main.cpp  process_data.cpp  process_data.h  utilities.h  visualize_network.cpp  visualize_network.h
examples/save-load-networks/: CMakeLists.txt  README.md  main.cpp
examples/simple-network/: CMakeLists.txt  README.md  main.cpp
knp/: .cccc.json  .clang-format  .clang-tidy  .cmake-format.yaml  .cppcheck-suppress.xml  .pylintrc  CMakeLists.txt  Doxyfile.in  autodoc.tgz  mainpage.dox
knp/autodoc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  directories.dox  footer.html  header.html  header.html.in  mainpage.dox
knp/autodoc/cmake/: Doxyfile.in  doxygen.cmake
knp/autodoc/common_files/: DoxygenLayout.xml  footer.html  header.html
knp/autodoc/common_files/fonts/: Kaspersky_Sans_Display.css  Kaspersky_Sans_Display_Bold.eot  Kaspersky_Sans_Display_ExtraBold.eot  Kaspersky_Sans_Display_Light.eot  Kaspersky_Sans_Display_Medium.eot  Kaspersky_Sans_Display_Regular.eot  Kaspersky_Sans_Display_SemiBold.eot
knp/autodoc/common_files/js/: icons-add-properties.js  toggle-alternative-theme.js
knp/autodoc/common_files/styles/: custom-alternative.css  custom.css  decapitalize.css  doxygen-awesome.css  icons.css  search-height-fix.css  search-size-fix.css  styles.css
knp/autodoc/fonts/: museo-sans.css
knp/autodoc/js/: icons-add-properties.js
knp/backends/: CMakeLists.txt
knp/backends/cpu/: CMakeLists.txt
knp/backends/cpu-multi-threaded-backend/: CMakeLists.txt
knp/backends/cpu-multi-threaded-backend/impl/: backend.cpp
knp/backends/cpu-single-threaded-backend/: CMakeLists.txt
knp/backends/cpu-single-threaded-backend/impl/: backend.cpp  device.cpp  (+4 more)
knp/base-framework/: CMakeLists.txt
knp/base-framework/cmake/: knp-base-frameworkConfig.cmake.in  knp-core.pc.in
knp/base-framework/impl/: backend_loader.cpp  csv_content.cpp  csv_content.h  data_saver.cpp  data_storage.cpp  data_storage_hdf5.cpp  data_storage_json.cpp  input_converter.cpp  load_network.cpp  load_network_alt.cpp  message_handler.cpp  message_handlers.cpp  model.cpp  model_executor.cpp  model_loader.cpp  network.cpp  observer.cpp  output_channel.cpp  save_network.cpp  synchronization.cpp  type_id_defines.cpp  type_id_defines.h
knp/core-library/: CMakeLists.txt
knp/core-library/cmake/: knp-coreConfig.cmake.in
knp/core-library/impl/: backend.cpp  common_precomp.h  device.cpp  message_bus.cpp  message_bus_impl.cpp  message_bus_impl.h  message_endpoint.cpp  message_endpoint_impl.h  message_header.cpp  messaging.cpp  population.cpp  projection.cpp  spike_message.cpp  subscription.cpp  synaptic_impact_message.cpp  uid.cpp
knp/devices-library/: CMakeLists.txt
knp/devices-library/impl/: altai.cpp  cpu.cpp  cpu_power.cpp  cpu_power.h  unknown_cpu.cpp  x86_cpu.cpp  x86_cpu_power.cpp  x86_cpu_power.h
knp/messaging/: CMakeLists.txt  message_header.fbs  spike_message.fbs  synapse_traits.fbs  synaptic_impact_message.fbs
knp/meta-library/: CMakeLists.txt
knp/neuron-traits-library/: CMakeLists.txt
knp/python-framework/: CMakeLists.txt
knp/python-framework/tests/: __init__.py
knp/synapse-traits-library/: CMakeLists.txt
knp/tests/: CMakeLists.txt  tester.cpp  utility.cpp
knp/tests/backend/: multi_thread_cpu_test.cpp  single_thread_cpu.cpp  single_thread_cpu_test.cpp  synchronization_test.cpp
knp/tests/common/: correct_build_test.cpp  generators.h  projection_tests.cpp  tests_common.h  uid_test.cpp
knp/tests/core/: converter_test.cpp  core_test.cpp  device_test.cpp  input_test.cpp  message_bus.cpp  message_bus_test.cpp  messaging_test.cpp  output_test.cpp  population.cpp  population_test.cpp  projection.cpp  projection_test.cpp  uid_test.cpp
knp/tests/data/: DartConfiguration.tcl
knp/tests/framework/: backend_loader.cpp  backend_loader_test.cpp  coordinate_test.cpp  data_storage_test.cpp  input_test.cpp  message_handler_test.cpp  model_executor_test.cpp  model_loader_test.cpp  model_test.cpp  network.cpp  network_test.cpp  output_test.cpp  population_connectors_test.cpp  population_creators_test.cpp  population_generators_test.cpp  projection_connectors_test.cpp  projection_creators_test.cpp  projection_synapse_parameters_generators_test.cpp  save_load_test.cpp  synchronization_test.cpp
(+372 files in other folders)
